# slim-translator

./: package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
src/: App.vue  bindings.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/locales/: all.toml
src-tauri/src/: commands.rs  config.rs  error.rs  main.rs  shortcut.rs  translate.rs  translate_with_api_key.rs  translate_without_api_key.rs  translator.rs  tray.rs
src/components/: Greet.vue
