[package]
name = "slim-translator"
version = "0.0.0"
description = "slim-translator"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json"] }
regex = "1.10.4"
anyhow = "1.0"
get-selected-text = "0.1.6"
mouse_position = "0.1.4"
rdev = "0.5.3"
rust-i18n = "3"
sys-locale = "0.3.1"
open = "5.1.4"
rand = "0.8.5"


[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 'z'     # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
