[package]
name = "slim-translator"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-shell = { version = "2.0.0-beta" }

specta = { version = "=2.0.0-rc.12" }
tauri-specta = { version = "=2.0.0-rc.11", features = ["typescript"] }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

anyhow = { version = "1" }
sys-locale = { version = "0.3.1" }
rust-i18n = { version = "3" }
open = { version = "5.1.4" }
rand = { version = "0.8.5" }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 'z'     # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
